--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a student at University of Arizona's Coding Bootcamp.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Chatham, Illinois</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I enjoy staying active and spending times with friends and family.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Web Developer</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Phoenix, AZ</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I love coding and want to make it into my career!</p>
     </section>
 
     <footer id="footer">
