updating our details

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <h1>Where I'm From</h1>
       <p>Chatham, Illinois</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>I enjoy staying active and spending times with friends and family.</p>
+      <p>I enjoy staying active and spending time with friends and family.</p>
       <h1>What's your dream job?</h1>
       <p>Web Developer</p>
       <h1>Where do you live?</h1>
